# ChangeLog for media-sound/lilypond
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/lilypond/ChangeLog,v 1.133 2012/11/06 05:38:38 radhermit Exp $

*lilypond-2.17.6 (06 Nov 2012)

  06 Nov 2012; Tim Harder <radhermit@gentoo.org> +lilypond-2.17.6.ebuild:
  Version bump.

  22 Oct 2012; Tim Harder <radhermit@gentoo.org> -lilypond-2.17.3.ebuild,
  -lilypond-2.17.4.ebuild:
  Remove old.

*lilypond-2.17.5 (22 Oct 2012)

  22 Oct 2012; Tim Harder <radhermit@gentoo.org> +lilypond-2.17.5.ebuild:
  Version bump.

  13 Oct 2012; Tim Harder <radhermit@gentoo.org> -lilypond-2.17.1.ebuild,
  -lilypond-2.17.2.ebuild:
  Remove old.

*lilypond-2.17.4 (13 Oct 2012)

  13 Oct 2012; Tim Harder <radhermit@gentoo.org> +lilypond-2.17.4.ebuild:
  Version bump.

*lilypond-9999 (30 Sep 2012)

  30 Sep 2012; Tim Harder <radhermit@gentoo.org> +lilypond-9999.ebuild:
  Add live version.

*lilypond-2.17.3 (30 Sep 2012)

  30 Sep 2012; Tim Harder <radhermit@gentoo.org> +lilypond-2.17.3.ebuild:
  Version bump.

*lilypond-2.17.2 (15 Sep 2012)

  15 Sep 2012; Tim Harder <radhermit@gentoo.org> +lilypond-2.17.2.ebuild,
  +files/lilypond-2.17.2-tex-docs.patch:
  Version bump.

  05 Sep 2012; Tim Harder <radhermit@gentoo.org> lilypond-2.16.0.ebuild,
  +files/lilypond-2.16.0-tex-docs.patch:
  Fix sandbox issue when not building docs (bug #434002 by Gerard Neil).

*lilypond-2.17.1 (01 Sep 2012)

  01 Sep 2012; Tim Harder <radhermit@gentoo.org> +lilypond-2.17.1.ebuild:
  Version bump.

  26 Aug 2012; Tim Harder <radhermit@gentoo.org> -lilypond-2.15.42.ebuild,
  -lilypond-2.15.95.ebuild:
  Remove old.

*lilypond-2.16.0 (26 Aug 2012)

  26 Aug 2012; Tim Harder <radhermit@gentoo.org> +lilypond-2.16.0.ebuild:
  Version bump.

*lilypond-2.15.95 (13 Aug 2012)

  13 Aug 2012; Tim Harder <radhermit@gentoo.org> +lilypond-2.15.95.ebuild:
  Version bump.

*lilypond-2.15.42 (06 Aug 2012)
