@@ -6,23 +6,25 @@ AUX lilypond-2.16.0-tex-docs.patch 620 SHA256 bc13387a935bd2c2208abdef02c9045ea8
 AUX lilypond-2.17.2-tex-docs.patch 608 SHA256 ca43b5633f3ee85748d5f0f43814b144ec4e0779961a9a802d45b551694d75e0 SHA512 fe22e649e12ba1aacf05dab14b1820d636d58dce252832331577935db2c0e565b3ec6073c6bec11a05a4c1254ddd1495252e6b3e41623e290363eb124e7fa6c1 WHIRLPOOL bdf4d95c108966e144946abb31dd5acd57102db08a410b51b562e250a0676466d8208090c880f6018bed45ac3b332acd3f66e7337cd036e5b66ee72f939c9779
 DIST lilypond-2.14.2.tar.gz 15224418 SHA256 243a6b3845722a37083d73ed681e69ffde0b3b9c6158af20db3c0926dd982696 SHA512 e2d551eb8cfc08387519c7282c3813072da644c7e503461669fa79621af2805ac63b9924c7bb2894b2413f05e202b426d9ee0f6889e99287cc1941442342232a WHIRLPOOL 3b85ad14214726f13fe6ffda7a2ba42b10c079139c0c44ec380a8ec5c485966f88ba52184ad126957515948a6de77f884fe4e6be7696a39eec8b1aafd682ec05
 DIST lilypond-2.16.0.tar.gz 15994773 SHA256 ecd5b7a2da668c94de7757e366f34bdd5d49b89e9b40ce859174dd2a7edb163d SHA512 254ea1a1efbff2f5eb39f9007a27d57b8a43fc86278e28594541c3c2b47c7f0349c7f390c7789528f9531fc95a64010db7beb25390a0f884653287919e600dcc WHIRLPOOL 7ee02629edf0ade4105f52fa3fdbcdd4e8cd763027e6be2a9871fe59138db848af00fb5f143ad4855d6522b484a15c0bc51a7a5a849fd955ddec7979e7e9904d
+DIST lilypond-2.16.1.tar.gz 16061427 SHA256 f56e21fe92f29c88365eb6cf80b5be86a169e23cfb054ccbec457059f3df796e SHA512 2b09e5c64fe707cef64d82dc4bb109afd95a33775148a1f81235f4dc04724f63e669fb7f07db008fd4707f25c5136a91686984974a9dc2d6c4a7ef85be543319 WHIRLPOOL a981f5a4ae1ee9c618708bf9a5cc78fee9e6ae179b7e1a7d33a767a971594009684d37a1b4bacf9a618f42f29ecaec0468e7a37aa8cd7e5ac9695ed645cab228
 DIST lilypond-2.17.5.tar.gz 16051524 SHA256 d121075918089f93c2527e4a9a47800668ea996570336aa062449296d6c9a17a SHA512 294c42e6e45fb838f04a7c0ffb6bfec5667d79be0fe779e11f1ebeffe5999630365ba5f29cefaba72fe8b5ee64e14eb04e80a26f4ffef3d580928a551be7a7fe WHIRLPOOL f3b929ecf32417a374eb4b6cb52d11b8990df319cd6072e9c2a208953def803d9b720587ad2965a0c88bd5dc5d7e5c8dacc42712e6c1e641df9ef99922968a86
 DIST lilypond-2.17.6.tar.gz 16112409 SHA256 dac4a1676aad4e0cb903d2736b500d63e74e1ecc68140dd0b3222d39f8379e26 SHA512 de1597bdf4fb336674cf87b9110997c69edf6cbd9b193a473f3e4d287390a04f368197ba40e2d202c79d2b98a18fed85bff541a2e081ecd0657846a8a64191fd WHIRLPOOL 4e483ca6613a99a00e185177475b09dfc46f31618544d3aef354c226d3d7453b2df2afa2fabbb2795db18f943f6afcd5d63f3bac0ac15fef2d38f0e6f45d068e
 EBUILD lilypond-2.14.2.ebuild 2331 SHA256 474da368f5a2d9ac9fb0381eafba65ec004c7d897bf3b970fad9c46fc1ac8c79 SHA512 00e02dcf5d10c08c9b8f064eb3e04259fa9831d49693c2a2ff4ffd9f30de1a955628862727ef6ea7c1b19049888f27b462885b13d139317da2c99900741de4b6 WHIRLPOOL 356eb215adf6310157b07d4300901464cfa0a3877206177441aacb732830842e72972739727112ddc55f0f01829d3bcf91c51682aaa77b7ab22684e947505a92
 EBUILD lilypond-2.16.0.ebuild 2381 SHA256 91a84a2b3c65394a5908dc8edf31cb3b1821d78b05a36e67225988a649d35272 SHA512 03a8788a8e8037f71564252bf8d7219e7099f15323c66702b9efda23840cba18c2d109e35111e31f8259459a7091a4bfaa575fdac4b6e0ea615b5c518ac34ec1 WHIRLPOOL aa3b5c30287e7d9aba1ccae2592e2b42fbdabb74101ae2ec0c1b7cde36369879a0a0e18d4132e4b6e55efd7798579ace41625bc8862eb22bf2f91814a2aaa10e
+EBUILD lilypond-2.16.1.ebuild 2389 SHA256 8a2df6008308d2a2707af47ba3ef061c6dbea447731f1c1faa2310f17509daa1 SHA512 70895758fe4b5b2066bf07771f5ae0c875406a60e02922790e5a9fd1f331d8f07c714a9d1813f79cfdc6c945a493b78f135ccba8fb714f698e733ab2c8950755 WHIRLPOOL 9ba4ab9a53f9dde0f0971c2c126e63b06e855aad27b6ce1113ff407ac8a597d550a9b7649ee58c299be88e2ead0b8e048025a7334ea30c0110ff1d92b6c3b4c3
 EBUILD lilypond-2.17.5.ebuild 2383 SHA256 a0e7671c2ede1b1fafb7e289518358afc1fb8a376e6d821011ed60c9cf8ba939 SHA512 71e4078736da4a9a3f5565dd15018bc18fcf5b0a02149ccfcdf4d27f2744d01e8b7e10ac78267094726fc107148526f6c698031bef2f971704605d65002cba63 WHIRLPOOL a1eec40034114f69ffbf157fdb7cd40507898360860430ae18ebffcbd769fb9de103b4282638073b47711c695585f733d3e98e09f3927fcae11926f849218e9f
 EBUILD lilypond-2.17.6.ebuild 2383 SHA256 d0f1d06eee76e92e78475cd1a68ef1fce90880513769d84e04bf4df86989015a SHA512 e46d74b6cc6c41bd1b4c33ef7c7d726b971a771e0c535899f0cca29dcb1d075dec0303e7273f556ea1cc1711410dc28aac1b05dce588fc7c54dba2696585b6ce WHIRLPOOL f040920eaf2f033755d96cf5036c130dac8a8b0eb492024fcf34328f6f96dc0623442941bc40878ba8dda7fda4c9e9859f4dc99f48f93978a6c23ea2398cb4bb
 EBUILD lilypond-9999.ebuild 2241 SHA256 69ae0dbcbcaafb80607d5c4058c0a2f17193200c9622c5484fe0bb8d27a59056 SHA512 77221cb32088248782396881c00dcb553065f264cafdddaa3d676a6f3b91e37f86a97958e6ac0e44c290ed9477f80e7f7e394c4a3718b46475a26f0522c95dda WHIRLPOOL 8725c1eed1b6613a495bfef8b981f081a83c01d730be333fe408e8816b13213379bfeddbcc8adfd806fefcf3e9ef2637dbc2cb3e151c1c9702e3c3e88ad9e344
-MISC ChangeLog 21913 SHA256 6539ca0b6812d21d3f17ef0e03bbca29919a9f5a55554f5a48dd093841084a89 SHA512 f2f5ff5bf492403daea8a8713e398d65a10d803efc275415331077661b6bf65eebff5a328ca59a5729664669c9ef2a05bb14112dade9a235e19e16cdd72511e7 WHIRLPOOL 1baa64e576aca19bc8e4a9c22e995bef9aad7e17165afb17c22758eaacfcc3ab26bbcfbb1175d148455a4ac10d4a647820a6e8a9274ff5a8ab0c9c13da0a372d
+MISC ChangeLog 22036 SHA256 98306acdc452708c5f07554154a16771fdf08a5d3eecb796473c1fdd896d54c1 SHA512 21fb45174c1fccdf94f0327da18c30f81464e5b86b7900b27e1557fde98a8c3c195d15756ec3667aa1b14163095ec7aa9139cc773f2a71bd2e4ce6891ea92349 WHIRLPOOL 81e626e77f6eec2f98b1291baa61936ff2dae9ab9991b8100d36027388d97154304d0c222002e7c34af49de836c80d0f3050706322ef5d2cd4c3f261abc22a72
 MISC metadata.xml 534 SHA256 9d9d5dba892fde9a346843a9cacaeac7ce9236f643d1c0f778333cc65181a025 SHA512 711b4d7ff31d686c01cc9f67bbd84bd69da5a955e60a759b814a9379d20079061d019a53da9906a75a4a408654307406eef99129655fb38a21953eaf209215e1 WHIRLPOOL 87cddb2db014ae47a3e2408fb696fcce7118632a8574d0b8be21ef603d3ecdc4714f2736a7a3388fc907e6b2b984feabca1f77b603e34ff1477920260cb696b4
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJQmKJwAAoJEEqz6FtPBkyjhlEH/jyAgW7bENhlqyPudnLdOqbF
-mn62sfsPVRhw6FXHRoF47AQPJbyCm0K5TReEKby49l/bUIsAAU/p26qdOjJwJMRG
-PZ6NEXGXxCArOVAJRSQ/zJCWBGRhv7OpbdVRPTukJc9P5mmJ5yo0g7+e7W1q6BFh
-sNE2IMsB98Wq/ZBJEkTBBbW60etb9AOP5TeMKs6B3/sCGg+q0jejbrKUBmTbNEcX
-5Qgnc5GA5kVG8bKGXyX/pBas7U5u22CvYZB7GNCoHWZeb0P4Pigf3BSz7ro4KIvw
-W1od6n+d58lASHVPS+vsf4T+MfmM6S4BNu31UUTKrR/tqivEq2fRhJf0GjO0ZYc=
-=KEtV
+iQEcBAEBCAAGBQJQoIGsAAoJEEqz6FtPBkyjNKMH/jxIfl7NYwq3oBHGwYyzt776
+Ps7/0jstfE0tj3BwEnnIlItMtTvdY0WyT4i/bwzS12uS+SxJRbYqiYvbmR0pEPiZ
+M6yKqur+9mMN6TRptxl0unuxGD/lFNPX8cThXxUj+Xfk9Z3pbwOUBWxZooek1g8d
+Nar6+jK3QyY3VaBw5WBICNjJPi8MEum1GPvQfLS4VS6KF16NMxuZ3ksN88iCUAaH
+gKO/NC0dYmoeqfoU1SZWEie0uBHSRrz1RzUKGyKuJlYtI15hGrRCwwS0jhVdm9Gv
+Xabpj6UPLIzOEBccaPN5ShdvHZBopBAWqJ68leigUBAyuRCZ5Ui3ljdKc11cIyg=
+=cxn4
 -----END PGP SIGNATURE-----
